@@ -3,6 +3,7 @@ youker-assistant (0.2.0-0ubuntu1) saucy; urgency=low
   * Modify Class SystemDispatcher and SessionDispatcher.
   * Add watch file into debian folder.
   * Resolve status of onekey button(LP: #1216236 ).
+  * Add monitorball code into systemdbus daemon.
 
  -- Kobe Lee (kylinkobe) <kobe24_lixiang@126.com>  Sat, 24 Aug 2013 14:47:02 +0800
 
